# Craft-Clash

./: .deepsource.toml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.txt  GNU General Public License - Project License.txt  GNU General Public License.txt  LICENSE.txt  MANIFEST.in  PLANNING.md  PLANNING.txt  README.md  SECURITY.md  TEXTURES INFO.txt  TEXTURES LICENSE.txt  __init__.py  __main__.py  _config.yml  index.html  index.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_information.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: cla.yml  codeql-analysis.yml  docker-publish.yml  push-to-pypi.yml  pylint.yml  tests.yml
assets/: Creative Commons Attribution 4.0 - Assets License.txt
assets/gui/: GUI LICENSE.txt  gui License.txt
assets/logo/: LOGO LICENSE.txt  Logo_Copyrights.txt
assets/music/: MUSIC LICENSE.txt  desktop.ini  fun.m4a  music License.txt
assets/sounds/: ambient_1.m4a
assets/textures/: TEXTURES INFO.txt  TEXTURES LICENSE.txt  Textures_Info.txt  copper_fence.json  item_details (TXT).txt  item_details.txt  stone_fence.json  wood_fence.json
craft-clash/: playscreen.py
craftclash/: __init__.py  aboutscreen.py  optionscreen.py  playscreen#.py  playscreen.old.py  playscreen.py
craftclash/pymodules/: turtle.py
craftclash/tests/: test_aboutscreen.py  (+1 more)
docs/: GAMEPLAY.md  OPTIONS.md  README.md  USAGE.md
exe/: main.py
terraria.org/: index.html
tests/: test_main.py
(+64 files in other folders)
